exports[`code > Empty code with backquote 1`] = `
[
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "code",
        "raw": "\`\`",
        "text": ""
      }
    ]
  }
]
`;

exports[`code > Simple code with backquote 1`] = `
[
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "code",
        "raw": "\`Simple code\`",
        "text": "Simple code"
      }
    ]
  }
]
`;
